# code/trendsellr-infrastructure-input/trendsellr-rest/src/main/java/com/trendsellr/infrastructure/input/rest/security/ApiKeyAuthFilter.java
@@ -7,45 +7,56 @@ import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.lang.NonNull;
 import org.springframework.security.authentication.BadCredentialsException;
-import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
+import org.springframework.util.AntPathMatcher;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
+import java.util.List;
 
 @Component
 public class ApiKeyAuthFilter extends OncePerRequestFilter {
 
     private final String apiKey;
 
-    private final AppAuthenticationEntryPoint authenticationEntryPoint;
+    private final List<String> publicPaths;
+
+    private final AppApiAuthenticationEntryPoint authenticationEntryPoint;
 
     public ApiKeyAuthFilter(@Value("${api.security.api-key}") final String apiKey,
-                            final AppAuthenticationEntryPoint authenticationEntryPoint) {
+                            @Value("${api.security.public-paths}") final List<String> publicPaths,
+                            final AppApiAuthenticationEntryPoint authenticationEntryPoint) {
         this.apiKey = apiKey;
+        this.publicPaths = publicPaths;
         this.authenticationEntryPoint = authenticationEntryPoint;
     }
 
     @Override
-    protected void doFilterInternal(final HttpServletRequest request, @NonNull final HttpServletResponse response, @NonNull final FilterChain filterChain)
+    protected void doFilterInternal(
+            @NonNull final HttpServletRequest request,
+            @NonNull final HttpServletResponse response,
+            @NonNull final FilterChain filterChain)
             throws ServletException, IOException {
+
+        if (this.isPublicPath(request.getRequestURI())) {
+            filterChain.doFilter(request, response);
+            return;
+        }
 
         final String requestApiKey = request.getHeader("X-API-KEY");
 
         if (!this.apiKey.equals(requestApiKey)) {
             SecurityContextHolder.clearContext();
-
-            BadCredentialsException authException = new BadCredentialsException("Invalid or missing API Key");
-
-            this.authenticationEntryPoint.commence(request, response, authException);
+            this.authenticationEntryPoint.commence(request, response, new BadCredentialsException("Invalid or missing API Key"));
             return;
         }
 
-        SecurityContextHolder.getContext().setAuthentication(
-                new UsernamePasswordAuthenticationToken("api-client", null, null)
-        );
-
         filterChain.doFilter(request, response);
+    }
+
+    private boolean isPublicPath(final String path) {
+        final AntPathMatcher pathMatcher = new AntPathMatcher();
+        return this.publicPaths.stream().anyMatch(publicPath -> pathMatcher.match(publicPath, path));
     }
 }
